[tool.poetry]
name = "ad_model_zoo"
version = "0.1.0"
description = ""
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "1.4.2"
mkdocs-material = "*"
fontawesome_markdown = "*"
mkdocs-mermaid2-plugin = "*"
pymdown-extensions = "*"
plantuml-markdown = "*"
python-markdown-math = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-awesome-pages-plugin = "*"
mkdocs-gitsnippet-plugin = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
